# meilisearch-api-client

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: add_or_replace.rs  create_index.rs  delete_index.rs  get_document.rs  get_documents.rs  get_index.rs  get_indexes.rs  indexes.rs  update_index.rs
src/: client.rs  constants.rs  documents.rs  error.rs  indexes.rs  lib.rs  rest_helper.rs
