[package]
name = "meilib"
version = "0.1.1"
edition = "2018"
authors = ["zTgx <beautifularea@163.com>"]
repository = "https://github.com/zTgx/meilib.git"
readme = "README.md"
description = "meilib is a client for MeiliSearch."
license = "MIT"
keywords = ["MeiliSearch", "api-client", "library"]

[dependencies]
actix-web = "3.0.0-alpha.2"
actix-rt = "1"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"


