[package]
name = "meilib"
version = "0.1.2"
edition = "2018"
authors = ["zTgx <beautifularea@163.com>"]
repository = "https://github.com/zTgx/meilib.git"
readme = "README.md"
description = "meilib is a client for MeiliSearch."
license = "MIT"
keywords = ["MeiliSearch", "api-client", "library"]
categories = [ "api-bindings", "database" ]

[dependencies]
actix-web = "3.0.0-alpha.2"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"

[dev-dependencies]
actix-rt = "1"
