[package]
name = "meilisearch-api-client"
version = "0.0.1"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/meilisearch-api-client.git"
readme = "README.md"
license = "MIT"
keywords = ["MeiliSearch", "api-client", "library"]

[dependencies]
actix-web = "3.0.0-alpha.2"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"

[dev-dependencies]
actix-rt = "1"
